--- a/exciter/exciter.ioc
+++ b/exciter/exciter.ioc
@@ -9,8 +9,7 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
 Mcu.IP5=TIM21
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IPNb=6
 Mcu.Name=STM32L011F(3-4)Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PB9-BOOT0
@@ -56,7 +55,6 @@ PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=RXD
 PA10.Locked=true
-PA10.Mode=Asynchronous
 PA10.Signal=USART2_RX
 PA13.Locked=true
 PA13.Mode=Serial_Wire
@@ -67,7 +65,6 @@ PA2.GPIOParameters=GPIO_Speed,GPIO_Label
 PA2.GPIO_Label=TXD
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA2.Locked=true
-PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=nPWRDN
@@ -89,7 +86,7 @@ PA6.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PA6.GPIO_Label=nDISP_CS
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
-PA6.PinState=GPIO_PIN_SET
+PA6.PinState=GPIO_PIN_RESET
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Speed,GPIO_Label
 PA7.GPIO_Label=DIVOUT
@@ -97,9 +94,8 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=WaveformGeneration
 PA7.Signal=LPTIM1_OUT
-PA9.GPIOParameters=GPIO_Speed,GPIO_Label
-PA9.GPIO_Label=REFOUT
-PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA9.GPIOParameters=GPIO_Speed
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA9.Locked=true
 PA9.Signal=S_TIM21_CH2
 PB1.GPIOParameters=GPIO_Label
@@ -149,55 +145,56 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=2-SystemClock_Config-RCC-false-HAL-false
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
-RCC.FCLKCortexFreq_Value=32000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPTIM1_Init-LPTIM1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true
+RCC.AHBFreq_Value=16000000
+RCC.APB1Freq_Value=16000000
+RCC.APB1TimFreq_Value=16000000
+RCC.APB2Freq_Value=16000000
+RCC.APB2TimFreq_Value=16000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=12000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=32000000
+RCC.I2C1Freq_Value=16000000
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,PLLSourceVirtual,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimPrescaler,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=32000000
-RCC.LPUARTFreq_Value=32000000
+RCC.LPTIMFreq_Value=16000000
+RCC.LPUARTFreq_Value=16000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=32000000
+RCC.MCOPinFreq_Value=16000000
 RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLDIV=RCC_PLLDIV_3
 RCC.PLLMUL=RCC_PLLMUL_8
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.PWRFreq_Value=32000000
+RCC.PWRFreq_Value=16000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=6000000
-RCC.SYSCLKFreq_VALUE=32000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIMFreq_Value=4000000
+RCC.SYSCLKFreq_VALUE=16000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
+RCC.TIMFreq_Value=2000000
 RCC.TimPrescaler=SYSTICK_CLKSOURCE_HCLK_DIV8
-RCC.TimerFreq_Value=4000000
-RCC.USART2Freq_Value=32000000
+RCC.TimerFreq_Value=2000000
+RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=12000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.WatchDogFreq_Value=37000
-SH.S_TIM21_CH2.0=TIM21_CH2,Output Compare2 CH2
+SH.S_TIM21_CH2.0=TIM21_CH2,PWM Generation2 CH2
 SH.S_TIM21_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=2.0 MBits/s
+SPI1.CalculateBaudRate=1000.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM21.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM21.IPParameters=Channel-Output Compare2 CH2,OCMode_2
-TIM21.OCMode_2=TIM_OCMODE_TOGGLE
-USART2.IPParameters=VirtualMode-Asynchronous
-USART2.VirtualMode-Asynchronous=VM_ASYNC
+TIM21.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM21.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM21.IPParameters=Prescaler,Period,ClockDivision,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2
+TIM21.Period=1
+TIM21.Prescaler=479
+TIM21.Pulse-PWM\ Generation2\ CH2=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM21_VS_ClockSourceINT.Mode=Internal
